# Scintara

./: .env.example  Dockerfile.txt  README.md  USAGE.md  pyproject.toml  requirements.txt  run_api.bat  vercel.json
api/: requirements.txt
app/: __main__.py  archive.py  dialogue.py  inference.py  model_info.py  personalities.py  requirements.txt  server.py  settings.py  utils.py
app/static/: about.html  app.js  archive.html  conversation.html  index.html  styles.css
scripts/: client_demo.py  download_model.py  quick_local.py
tests/: test_inference.py
