[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloomed-terminal"
version = "0.1.0"
description = "Compact, persona-backed text-generation API (FastAPI + Transformers)"
authors = [{name="dev-nightshift"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "anthropic>=0.40.0",
  "supabase>=2.9.0",
  "openai>=1.54.0",
  "mem0ai>=0.1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
